compiler/testData/diagnostics/tests/dataClasses/dataClassNoName.kt
// See EA-73584
data class<!SYNTAX!><!> {

}

// See KT-9296
<!WRONG_MODIFIER_TARGET!>data<!> interface<!SYNTAX!><!> {

}